# spectacular

./: CMakeLists.txt  LICENSE  README.md
include/core/: APIDataReceiver.h  CommonStructures.h  SessionStrParsingUtils.h
src/: irsdk_utils.cpp  main.cpp
src/core/: APIDataReceiver.cpp  CommonStructures.cpp  SessionStrParsingUtils.cpp
